--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
-section.suggestion {
+div.main-content {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    padding: 0px 174px 60px 174px;
 }
 
-.parent {
+section.suggestion {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.grid {
   display: grid;
   grid-template-areas:
     "a b e e"
@@ -13,14 +20,20 @@ section.suggestion {
 }
 
 section.enregistrement {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
 }
 
-section.enregistrement article{
-    flex: 1;
+article {
+  flex: 1;
+}
+
+section.autres {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 p {
