--- a/style.css
+++ b/style.css
@@ -11,52 +11,70 @@
   font-family: "Elms sans", sans-serif;
 }
 
+html,
+body,
+main {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 div.wrapper {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 aside {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 10px;
-    justify-content: start;
-    border: solid 1px var(--border-color);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 10px;
+  height: 100vh;
+  justify-content: start;
+  border: solid 1px var(--border-color);
 }
 
 div.app-name-container {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
 }
 
 nav {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 h1 {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 div.main-content {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  height: 100%;
   background-color: var(--main-background-color);
-  padding: 0px 150px 60px 150px;
+  padding: 0px 70px 60px 70px;
 }
 
 h2.menu-title {
-    font-size: 10px;
-    color: var(--text-secondaire);
-    margin: 0%;
+  font-size: 10px;
+  color: var(--text-secondaire);
+  margin: 0%;
 }
 
 ul {
-    margin: 0%;
+  margin: 0%;
+  list-style: none;
+  padding-left: 0;
+}
+
+a {
+  font-size: 10px;
+  text-decoration: none;
 }
 
 div.title-btn {
@@ -76,10 +94,10 @@ button.enregistrer-btn {
   flex-direction: row;
   gap: 5px;
   align-items: center;
-  padding: 4px 8px;
+  padding: 2px 4px;
   border: unset;
   border-radius: 5px;
-  font-size: 10px;
+  font-size: 8px;
   color: var(--secondary-background-color);
   background-color: var(--terciary-background-color);
   height: fit-content;
@@ -96,6 +114,8 @@ section.suggestion {
   grid-template-areas:
     "a b e e"
     "c d e e";
+  grid-template-columns: 1fr 1fr 2fr 2fr;
+  grid-template-rows: auto auto;
   gap: 8px;
 }
 
@@ -107,11 +127,12 @@ section.enregistrement {
 }
 
 article {
-  flex: 1;
+  flex: auto;
 }
 
 section.autres {
   display: flex;
+  flex: 1;
   flex-direction: column;
   gap: 8px;
 }
