--- a/V2/style.css
+++ b/V2/style.css
@@ -8,6 +8,7 @@
 	--secondary-text-color: #9f9f9f;
 	--terciary-text-color: #f87700;
 	/*Border color*/
+	--searchBar-border-color: #e0e0e0;
 	--border-color: #cfcdc5;
 	/*Font styling*/
 	--font-family-base: "Elms Sans", sans-serif;
@@ -18,6 +19,8 @@
 	margin: 0;
 	font-family: var(--font-family-base);
 }
+
+/* Reset body and html */
 
 /*Text styling*/
 h1,
@@ -51,8 +54,8 @@ p[class*="orange"] {
 }
 
 h2.menu-gray {
-    font-size: 1rem;
-    font-weight: 500;
+	font-size: 1rem;
+	font-weight: 500;
 }
 
 /*Layout*/
@@ -75,17 +78,18 @@ a {
 
 /*Aside*/
 aside {
-	display: flex;
-	flex-direction: column;
-	gap: 58px;
-	height: 103.75rem;
-	width: 18rem;
-	background-color: var(--secondary-bg-color);
-	box-shadow: 5px 5px 10px var(--border-color);
-	border: 1px solid var(--border-color);
-	padding-left: 2rem;
-	padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 58px;
+  height: 103.75rem;
+  width: 18rem;
+  flex: 0 0 18rem;
+  background-color: var(--secondary-bg-color);
+  box-shadow: 5px 5px 10px var(--border-color);
+  border: 1px solid var(--border-color);
+  padding: 2rem;
 }
+
 
 div.app-name {
 	display: flex;
@@ -106,9 +110,9 @@ section.menu {
 }
 
 nav ul {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
 
 nav ul li {
@@ -131,4 +135,34 @@ nav ul li a {
 }
 
 /*MAIN*/
-/**/
+main {
+	padding: 2.625rem 10.313rem;
+	width: 100%;
+}
+/*Header*/
+header {
+	display: flex;
+	flex-direction: row;
+	gap: 1.375rem;
+	align-items: center;
+	justify-content: center;
+}
+
+input[type="search"] {
+	padding: 0.5rem 1rem;
+	border: 1px solid var(--searchBar-border-color);
+	border-radius: 999px;
+	width: 1091px;
+}
+
+div.user {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 1rem;
+}
+
+div.user > img {
+	height: 2rem;
+	width: 2rem;
+}
