--- a/V2/style.css
+++ b/V2/style.css
@@ -23,9 +23,9 @@
 /* Reset body and html */
 
 /*Text styling*/
-h1,
-h2,
-p,
+h1[class*="black"],
+h2[class*="black"],
+p[class*="black"],
 a[class*="black"] {
 	color: var(--primary-text-color);
 }
@@ -34,12 +34,13 @@ h1 {
 	font-size: 16px;
 }
 
-h2,
+h2[class*="gray"],
 p[class*="gray"] {
 	color: var(--secondary-text-color);
 }
 
-p,
+p[class*="orange"],
+span[class*="orange"],
 a[class*="orange"] {
 	color: var(--terciary-text-color);
 }
@@ -78,18 +79,17 @@ a {
 
 /*Aside*/
 aside {
-  display: flex;
-  flex-direction: column;
-  gap: 58px;
-  height: 103.75rem;
-  width: 18rem;
-  flex: 0 0 18rem;
-  background-color: var(--secondary-bg-color);
-  box-shadow: 5px 5px 10px var(--border-color);
-  border: 1px solid var(--border-color);
-  padding: 2rem;
+	display: flex;
+	flex-direction: column;
+	gap: 58px;
+	height: 103.75rem;
+	width: 18rem;
+	flex: 0 0 18rem;
+	background-color: var(--secondary-bg-color);
+	box-shadow: 5px 5px 10px var(--border-color);
+	border: 1px solid var(--border-color);
+	padding: 2rem;
 }
-
 
 div.app-name {
 	display: flex;
@@ -136,8 +136,18 @@ nav ul li a {
 
 /*MAIN*/
 main {
+	display: flex;
+	flex-direction: column;
+	gap: 60px;
 	padding: 2.625rem 10.313rem;
 	width: 100%;
+}
+
+div.content-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 16px;
 }
 /*Header*/
 header {
