--- a/V2/style.css
+++ b/V2/style.css
@@ -54,6 +54,21 @@ p[class*="orange"] {
 	color: var(--terciary-text-color);
 }
 
+button[class*="orange"] {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 6px;
+	border-radius: 4px;
+	border: unset;
+	padding: 8px 10px;
+	height: fit-content;
+	text-align: center;
+	color: var(--secondary-bg-color);
+	background-color: var(--terciary-bg-color);
+	cursor: pointer;
+}
+
 h2.menu-gray {
 	font-size: 1rem;
 	font-weight: 500;
@@ -175,4 +190,25 @@ div.user {
 div.user > img {
 	height: 2rem;
 	width: 2rem;
+}
+
+/*Content*/
+div.content-container {
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+}
+
+section.suggestion {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+}
+
+.suggestion-title {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
