--- a/V2/style.css
+++ b/V2/style.css
@@ -183,7 +183,6 @@ main {
 div.content-container {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 	height: 100%;
 	gap: 68px;
@@ -333,10 +332,31 @@ div.autre-content {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	background-color: var(--secondary-bg-color);
 	padding: 12px;
+}
+
+div.progress-container {
+	display: flex;
+	flex-direction: column;
+	align-items: end;
+}
+.progress-subtitle {
+	padding-left: 16px;
+	color: var(--secondary-text-color);
+}
+
+progress.player-progress {
+	width: 100%;
 }
 
 article > img {
 	height: 200px;
 	width: 200px;
+}
+
+span.material-symbols-outlined[data-icon*="play"] {
+	align-items: end;
+	color: var(--terciary-text-color);
+	cursor: pointer;
 }
