--- a/V2/style.css
+++ b/V2/style.css
@@ -20,8 +20,6 @@
 	font-family: var(--font-family-base);
 }
 
-/* Reset body and html */
-
 /*Text styling*/
 h3[class*="black"],
 h1[class*="black"],
@@ -60,6 +58,7 @@ p[class*="orange"] {
 	color: var(--terciary-text-color);
 }
 
+/*button & card animation*/
 button[class*="orange"] {
 	display: flex;
 	align-items: center;
@@ -90,9 +89,60 @@ button[class*="orange"]:active {
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+article[class*="card"] {
+	transition: background-color 0.3s ease, transform 0.2s ease,
+		box-shadow 0.2s ease;
+}
+
+article[class*="card"]:hover {
+	box-shadow: 0 2px 10px rgba(255, 160, 50, 0.4);
+}
+
+/**/
+
 h2.menu-gray {
 	font-size: 1rem;
 	font-weight: 500;
+}
+
+progress.player-progress {
+	height: 5px;
+	appearance: none;
+	-webkit-appearance: none;
+}
+
+progress.player-progress::-webkit-progress-bar {
+	background-color: var(--primary-bg-color); /* light orange background */
+	border-radius: 5px;
+}
+
+progress.player-progress::-webkit-progress-value {
+	background-color: orange; /* the orange fill */
+	border-radius: 5px;
+}
+
+progress.player-progress::-moz-progress-bar {
+	background-color: orange;
+}
+
+progress.default {
+	height: 5px;
+	appearance: none;
+	-webkit-appearance: none;
+}
+
+progress.default::-webkit-progress-bar {
+	background-color: #e4e4e7;
+	border-radius: 5px;
+}
+
+progress.default::-webkit-progress-value {
+	background-color: #aeaeb2;
+	border-radius: 5px;
+}
+
+progress.default::-moz-progress-bar {
+	background-color: orange;
 }
 
 /*Layout*/
@@ -118,11 +168,10 @@ aside {
 	display: flex;
 	flex-direction: column;
 	gap: 58px;
-	height: 103.75rem;
+	height: auto;
 	width: 18rem;
 	flex: 0 0 18rem;
 	background-color: var(--secondary-bg-color);
-	box-shadow: 5px 5px 10px var(--border-color);
 	border: 1px solid var(--border-color);
 	padding: 2rem;
 }
@@ -225,6 +274,7 @@ section.suggestion {
 	height: 45%;
 	width: 100%;
 	display: flex;
+	align-items: center;
 	flex-direction: column;
 	gap: 16px;
 }
@@ -239,13 +289,14 @@ section.suggestion {
 /*GRID*/
 .grid {
 	display: grid;
-	height: 100%;
+	height: 1000px;
+	width: 100%;
 	grid-template-areas:
 		"a b e"
 		"c d e";
 	grid-template-rows: 1fr 1fr;
 	grid-template-columns: 1fr 1fr 2fr;
-	gap: 8px;
+	gap: 19px;
 }
 
 #a {
@@ -271,6 +322,7 @@ article.card {
 	flex-direction: column;
 	gap: 8px;
 	justify-content: space-between;
+	padding-bottom: 8px;
 	border-radius: 8px;
 }
 
@@ -291,6 +343,7 @@ article.card {
 }
 
 span[data-icon="favorite"] {
+	width: fit-content;
 	cursor: pointer;
 }
 
@@ -305,8 +358,8 @@ span[data-icon="favorite"] {
 	border-radius: 16px;
 }
 
-/*AUTRES*/
-section.autre {
+/*THEMATIQUE*/
+section.thematique {
 	align-items: center;
 	justify-content: center;
 	width: 100%;
@@ -315,7 +368,7 @@ section.autre {
 	gap: 16px;
 }
 
-article.them-play {
+article.card-them-play {
 	display: flex;
 	flex-direction: row;
 	flex-grow: 1;
@@ -359,4 +412,23 @@ span.material-symbols-outlined[data-icon*="play"] {
 	align-items: end;
 	color: var(--terciary-text-color);
 	cursor: pointer;
+}
+
+/*AUTRE*/
+section.autre {
+	display: flex;
+	flex-direction: row;
+	gap: 16px;
+	height: 18.75rem;
+	width: 100%;
+	justify-content: center;
+}
+
+.card-autre {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	flex-grow: 1;
+	padding-bottom: 8px;
+	border-radius: 8px;
 }
