--- a/V2/style.css
+++ b/V2/style.css
@@ -89,11 +89,13 @@ button[class*="orange"]:active {
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+footer,
 article[class*="card"] {
 	transition: background-color 0.3s ease, transform 0.2s ease,
 		box-shadow 0.2s ease;
 }
 
+footer:hover,
 article[class*="card"]:hover {
 	box-shadow: 0 2px 10px rgba(255, 160, 50, 0.4);
 }
@@ -149,6 +151,7 @@ progress.default::-moz-progress-bar {
 body {
 	display: flex;
 	flex-direction: row;
+	height: 1610px;
 }
 
 li {
@@ -233,7 +236,7 @@ div.content-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 100%;
+	height: 80%;
 	gap: 68px;
 }
 
@@ -431,4 +434,37 @@ section.autre {
 	flex-grow: 1;
 	padding-bottom: 8px;
 	border-radius: 8px;
+}
+
+/*FOOTER*/
+
+footer {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	background-color: var(--secondary-bg-color);
+}
+
+div.footer-content {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	height: 100%;
+	width: 100%;
+	padding: 6px;
+}
+
+div.main-footer-content {
+	align-items: center;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	height: 100%;
+	justify-content: space-between;
+}
+
+.footer-img {
+	height: 100px;
+	width: 165px;
 }
