--- a/V2/style.css
+++ b/V2/style.css
@@ -151,7 +151,8 @@ progress.default::-moz-progress-bar {
 body {
 	display: flex;
 	flex-direction: row;
-	height: 1610px;
+	width: 100%;
+	height: 100%;
 }
 
 li {
@@ -226,9 +227,15 @@ nav ul li a {
 main {
 	display: flex;
 	flex-direction: column;
+	width: calc(100vw - 500px);
+}
+
+.box {
+	display: flex;
+	flex-direction: column;
 	gap: 60px;
 	padding: 2.625rem 10.313rem;
-	width: 100%;
+	height: fit-content;
 	background-color: var(--primary-bg-color);
 }
 
@@ -236,7 +243,7 @@ div.content-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 80%;
+	height: 100%;
 	gap: 68px;
 }
 
@@ -321,7 +328,6 @@ section.suggestion {
 article.card {
 	display: flex;
 	height: 100%;
-	width: 100%;
 	flex-direction: column;
 	gap: 8px;
 	justify-content: space-between;
@@ -346,7 +352,6 @@ article.card {
 }
 
 span[data-icon="favorite"] {
-	width: fit-content;
 	cursor: pointer;
 }
 
